kubernetes/mini/apps/games/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: games
  labels:
    goldilocks.fairwinds.com/enabled: "true"
    pod-security.kubernetes.io/enforce: privileged
annotations:
  kustomize.toolkit.fluxcd.io/prune: disabled
  pod-security.kubernetes.io/enforce: privileged
